--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "llama-node": "^0.1.6",
     "mongoose": "^8.8.1",
     "puppeteer": "^24.2.1",
     "sanitize-html": "^2.13.1",
